# software_renderer

./: .gitignore  CMakeLists.txt
dependencies/glad/: CMakeLists.txt  glad.c  glad.h
dependencies/tiny_obj_loader/: tiny_obj_loader.cpp
resources/models/head/: head.mtl
resources/shaders/: fullScreenQuadShader.frag  fullScreenQuadShader.vert
src/: CShader.cpp  CShader.h  camera.cpp  camera.h  frame.cpp  frame.h  image.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  utility_structs.h  viewer.cpp  viewer.h
